--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 h1 {
 
 
-  font-size: 30px;
+  font-size: 35px;
   background-color: white;
   font-family: VG;
   
@@ -34,6 +34,7 @@ h1 {
 #link1 {
   color: #1a1aff;
   text-decoration: underline;
+  transform: rotate(20deg);
 }
   
   
